Fix modules order

--- a/src/config.toml
+++ b/src/config.toml
@@ -5,7 +5,7 @@ pos_x = 0
 pos_y = 1000
 
 modules_left = ["I3"]
-modules_right = ["Clock","Alsa","Mpris","Cpu"]
+modules_right = ["Cpu","Mpris","Alsa","Clock"]
 
 [[bars]]
 name = "bar-right"
@@ -14,4 +14,4 @@ pos_x = 1920
 pos_y = 1000
 
 modules_left = ["I3"]
-modules_right = ["Clock","Alsa","Mpris","Cpu"]
+modules_right = ["Cpu","Mpris","Alsa","Clock"]
