New Config Format

--- a/src/config.toml
+++ b/src/config.toml
@@ -1,17 +1,16 @@
-[[bars]]
-name = "bar-left"
+[bars.bar-left]
 monitor = "DP-1"
 pos_x = 0
 pos_y = 1000
-
+ 
 modules_left = ["I3"]
 modules_right = ["Cpu","Mpris","Alsa","Clock"]
-
-[[bars]]
-name = "bar-right"
+ 
+[bars.bar-right]
 monitor = "HDMI-0"
 pos_x = 1920
 pos_y = 1000
-
+ 
 modules_left = ["I3"]
 modules_right = ["Cpu","Mpris","Alsa","Clock"]
+
