--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,19 +5,20 @@ authors = ["Poly <bartek.marynczak@op.pl>"]
 edition = "2018"
 
 [dependencies]
-gio = "0.9.0"
-gtk = "0.9.1"
-gdk = "0.13.1"
+gio = "0.14"
+gtk = "0.14"
+gdk = "0.14"
+glib = "0.14"
 
-relm = "0.20.0"
-relm-derive = "0.20.0"
+relm = "0.22"
+relm-derive = "0.22"
 
 serde = "1.0"
 serde_derive = "1.0"
 ron = "0.6.0"
 
-chrono = "*"
+chrono = "0.4"
 i3ipc = "0.10.1"
-alsa = "0.4.2"
+alsa = "0.5.0"
 mpris = "1.1.2"
 systemstat = "0.1.5"
