--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,11 @@ i3ipc = "0.10.1"
 alsa = "0.5.0"
 mpris = "1.1.2"
 systemstat = "0.1.5"
+
+
+# reqwest = {version="0.11.0",features=["blocking"]}
+gdk-pixbuf = "0.14.0"
+lazy_static = "1.4.0"
+glib = "0.14.0"
+form_urlencoded = "1.0.1"
+url = "2.2.2"
