--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "yetanotherbar"
 version = "0.1.0"
-authors = ["Poly <bartek.marynczak@op.pl>"]
+authors = ["Poly <marynczak.bartlomiej@gmail.com>"]
 edition = "2018"
 
 [dependencies]
@@ -22,3 +22,11 @@ i3ipc = "0.10.1"
 alsa = "0.5.0"
 mpris = "1.1.2"
 systemstat = "0.1.5"
+gtk-layer-shell = { version="0.2.1", optional=true}
+
+# Blocked by: https://github.com/grelltrier/gtk-layer-shell-gir/pull/2
+# gtk-layer-shell = { version="0.2.1", features=["v0_5"] }
+
+[features]
+default=[]
+wayland=["gtk-layer-shell"]
