--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 
 [dependencies]
 gio = "0.14"
-gtk = "0.14"
+gtk = { version="0.14", features=["v3_22"] }
 gdk = "0.14"
 glib = "0.14"
 
